Fix caption not visible issue

--- a/static/css/easeofuse.css
+++ b/static/css/easeofuse.css
@@ -9,6 +9,9 @@
 .ml10p {
     margin-left: 10%;
 }
+.ml25p {
+    margin-left: 25%;
+}
 .ml5p {
     margin-left: 5%;
 }
